# eye-cancer-agent

./: .env.example  .gitignore  .npmrc  DEPLOY.md  PROGRESS.md  README.md  RUN.md  package.json  pnpm-lock.yaml  render.yaml
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  middleware.py  ratelimit.py
apps/api/app/agents/: __init__.py  base.py  eye.py  oncology.py  orchestrator.py  registry.py  vision.py
apps/api/app/api/: deps.py  files.py
apps/api/app/api/v1/: agents.py  health.py  me.py  router.py  scans.py  stats.py
apps/api/app/core/: config.py  errors.py  logging.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  audit.py  enums.py  organization.py  registry.py  scan.py  user.py
apps/api/app/observability/: metrics.py
apps/api/app/schemas/: agent.py  common.py  scan.py  user.py
apps/api/app/services/: audit.py  cache.py  images.py  imaging.py
apps/api/app/services/ai/: __init__.py  base.py  factory.py  service.py
apps/api/app/services/ai/providers/: anthropic.py  gemini.py  mock.py  openai_compat.py
apps/api/app/services/cancer/: __init__.py  base.py  factory.py  skin.py
apps/api/app/services/eye/: __init__.py  base.py  factory.py  fundus_onnx.py  openai_vision.py
apps/api/app/services/onnx/: __init__.py  classifier.py  registry.py
apps/api/app/services/report/: __init__.py  narrator.py
apps/api/app/services/storage/: __init__.py  base.py  local.py  s3.py
apps/api/tests/: conftest.py  test_ai_provider.py  test_health.py  test_ratelimit.py  test_scan_flow.py
docs/: 00-overview.md  (+13 more)
(+61 files in other folders)
