[project]
name = "amvp-api"
version = "0.1.0"
description = "AI Medical Vision Platform — API gateway & orchestrator client"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.32",
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
    "redis>=5.0.8",
    "arq>=0.26.0",
    "httpx>=0.27.0",
    "pyjwt[crypto]>=2.9.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.9",
    "prometheus-client>=0.20.0",
    "pillow>=10.4.0",
    "numpy>=1.26.0",
    "onnxruntime>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
storage-s3 = [
    "boto3>=1.35.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "C4", "SIM"]
ignore = [
    "B008",   # FastAPI Depends() in defaults
    "UP046",  # keep explicit Generic[T] for Pydantic generics clarity
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
